@@ -25,14 +25,16 @@
 FILE *
 fopen (const char *filename,  const char *mode)
 {
-#if defined (KPSE_COMPAT_API)
-  kpathsea kpse = kpse_def;
-#endif
 #undef fopen
   FILE *ret = fopen (filename, mode);
 #if defined (KPSE_COMPAT_API)
+  kpathsea kpse = kpse_def;
   if (KPATHSEA_DEBUG_P (KPSE_DEBUG_FOPEN))
+#if defined(_WIN64)
+    DEBUGF3 ("fopen(%s, %s) => 0x%I64x\n", filename, mode, (unsigned __int64) ret);
+#else
     DEBUGF3 ("fopen(%s, %s) => 0x%lx\n", filename, mode, (unsigned long) ret);
+#endif
 #endif
   return ret;
 }
@@ -40,14 +42,16 @@ fopen (const char *filename,  const char *mode)
 int
 fclose (FILE * f)
 {
-#if defined (KPSE_COMPAT_API)
-  kpathsea kpse = kpse_def;
-#endif
 #undef fclose
   int ret = fclose (f);
 #if defined (KPSE_COMPAT_API)
+  kpathsea kpse = kpse_def;
   if (KPATHSEA_DEBUG_P (KPSE_DEBUG_FOPEN))
+#if defined(_WIN64)
+    DEBUGF2 ("fclose(0x%I64x) => %d\n", (unsigned __int64) f, ret);
+#else
     DEBUGF2 ("fclose(0x%lx) => %d\n", (unsigned long) f, ret);
+#endif
 #endif
   return ret;
 }
